gold css commit
gold css commit

--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -48,7 +48,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-present-rank-new{margin-left: 20px;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 934px;}
-.gold-store-present-card-center,{text-align: center;font-size: 14px;}
+.gold-store-present-card-center{text-align: center;font-size: 14px;}
 .gold-store-present-card-name{color: #333;display: block;margin: 20px 0 5px;}
 .gold-exchange-present-card-name{color: #999;display: block;margin-top: 17px;line-height: 1;}
 .gold-exchange-present-card-name span{color:#333;margin-left: 10px;}
