基础信息页面和通知页修改

--- a/source/widget/notice/notice.less
+++ b/source/widget/notice/notice.less
@@ -8,6 +8,7 @@
         background:#fff;
         border-radius:5px;
         .notice-nav{
+            height: 700px;
             margin: 0;
             padding-top: 15px;
             list-style: none;
@@ -16,11 +17,15 @@
                 height: 30px;
                 line-height: 30px;
                 margin-top: 7px;
+                padding-left: 25px;
                 font-family: "Microsoft YaHei";
                 font-size: 14px;
-                color: #333;
-                letter-spacing: 2px;
-                text-align: center;
+                letter-spacing: 1px;
+                em{
+                    margin-left: 3px;
+                    font-style: normal;
+                    color: #e74c3c;
+                }
             }
             .notice-hover{
                 color: #fff;
@@ -82,6 +87,7 @@
                  word-break:
                  break-all;
                  p{
+                     height:95px;
                      color: #333;
                      line-height: 32px;
                      margin-bottom: 10px;
@@ -99,6 +105,9 @@
                     color: #a0a0a0;
                  }
             }
+        }
+        .nm-paging{
+            min-height: 60px;
         }
     }    
 }
