--- a/source/widget/notice/notice.css
+++ b/source/widget/notice/notice.css
@@ -10,6 +10,7 @@
   border-radius: 5px;
 }
 .notice-warp #notice-l .notice-nav {
+  height: 700px;
   margin: 0;
   padding-top: 15px;
   list-style: none;
@@ -19,11 +20,15 @@
   height: 30px;
   line-height: 30px;
   margin-top: 7px;
+  padding-left: 25px;
   font-family: "Microsoft YaHei";
   font-size: 14px;
-  color: #333;
-  letter-spacing: 2px;
-  text-align: center;
+  letter-spacing: 1px;
+}
+.notice-warp #notice-l .notice-nav li em {
+  margin-left: 3px;
+  font-style: normal;
+  color: #e74c3c;
 }
 .notice-warp #notice-l .notice-nav .notice-hover {
   color: #fff;
@@ -85,6 +90,7 @@
   word-break: break-all;
 }
 .notice-warp #notice-r .notice-message .notice-text p {
+  height: 95px;
   color: #333;
   line-height: 32px;
   margin-bottom: 10px;
@@ -100,4 +106,7 @@
   display: inline-block;
   font-size: 12px;
   color: #a0a0a0;
+}
+.notice-warp #notice-r .nm-paging {
+  min-height: 60px;
 }
