--- a/source/widget/personalCenter/css/personalCenter.less
+++ b/source/widget/personalCenter/css/personalCenter.less
@@ -103,16 +103,25 @@
       .focus;
       .centerHeader-notFoucs-btn{
         letter-spacing: 4px;
+        cursor: pointer;
         .btn;
+        &:hover{
+          background: #e87204;
+        }
       }
     }
     .centerHeader-alFocus{
       .focus;
       .centerHeader-alFocus-btn{
         .btn;
+        cursor: pointer;
         margin-right: 9px;
       }
       .centerHeader-willFocus-btn{
+        &:hover{
+          background: #ccc;
+        }
+        cursor: pointer;
         display: inline-block;
         width: 80px;
         height: 33px;
