--- a/source/widget/homework/homework.less
+++ b/source/widget/homework/homework.less
@@ -367,9 +367,12 @@ html,body {
                 height: 34px;
                 display: inline-block;
                 background-position: 0 -45px; 
+                overflow: hidden;
               }
               .homework-score{
                   width: 153px;
+                  display: block;
+                  overflow: hidden;
                   img{
                      padding: 0 3px;
                      vertical-align: inherit;
