--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -45,3 +45,12 @@ em {
 .label {
     font-weight: 500;
 }
+
+.icon {
+    &.icon-arrow-right {
+        width: 4px;
+        height: 14px;
+        font: 400 9px/14px consolas;
+        padding-top: 4px;
+    }
+}
