--- a/source/static/css/default.css
+++ b/source/static/css/default.css
@@ -1,1 +1,1 @@
-html,body{font-family:"微软雅黑",Helvetica,'Source Sans Pro',sans-serif}ul,ol{margin:0;padding-left:0;list-style:none}em{font-style:normal;padding:0 .2rem}.label{font-weight:500}
+html,body{font-family:"微软雅黑",Helvetica,'Source Sans Pro',sans-serif}ul,ol{margin:0;padding-left:0;list-style:none}em{font-style:normal;padding:0 .2rem}.label{font-weight:500}.icon.icon-arrow-right{width:4px;height:14px;font:400 9px/14px consolas;padding-top:4px}
