--- a/source/widget/personalCenter/css/personalCenter.css
+++ b/source/widget/personalCenter/css/personalCenter.css
@@ -3,15 +3,20 @@
   width: 100%;
   padding-top: 16px;
   height: 100%;
-  background: url('../img/background.png') no-repeat;
-  background-size: 100% 100%;
+  background: url('../img/background.png');
   -moz-background-size: 100% 100%;
 }
 .centerHeader .centerHeader-background {
   width: 1190px;
   height: 300px;
-  margin: 0 auto ;
+  margin: 0 auto;
   background: url('../img/header.jpg');
+}
+.centerHeader .centerHeader-background .centerHeader-ib {
+  width: 1190px;
+  height: 300px;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 .centerHeader .centerHeader-background .centerHeader-img {
   padding-top: 60px;
@@ -99,6 +104,10 @@
   font-size: 12px;
   color: #fff;
   margin-top: 12px;
+}
+.centerHeader .centerHeader-background .centerHeader-selfintro span {
+  font-size: 12px;
+  margin: 0 5px;
 }
 .centerHeader .centerHeader-background .focus {
   text-align: center;
@@ -348,7 +357,7 @@
   width: 260px;
   background: #fff;
   border-radius: 4px;
-  height: 513px;
+  height: 413px;
   font-size: 12px;
   padding-top: 18px;
 }
@@ -359,9 +368,10 @@
 }
 .center-visit .center-visit-person {
   display: inline-block;
-  margin: 25px 14px 0;
-  height: 85px;
-  width: 50px;
+  padding: 15px 14px 10px;
+  height: 110px;
+  width: 78px;
+  cursor: pointer;
 }
 .center-visit .center-visit-person .center-visit-header {
   width: 40px;
@@ -375,6 +385,15 @@
 .center-visit .center-visit-person .center-visit-time {
   margin-top: 6px;
   color: #999999;
+}
+.center-visit .blueRed-v:hover {
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  border-radius: 2px;
+  transform: scale(1.05) translate(2px, 0);
+  -webkit-transform: scale(1.05) translate(2px, 0);
+  -moz-transform: scale(1.05) translate(2px, 0);
+  z-index: 10;
 }
 /* 个人中心 最近访问 center-visit end */
 /* 个人中心直播献花 center-broadcast start */
