--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -519,6 +519,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	border-bottom: 1px solid #3bafda;
 	overflow: hidden;
 	margin-bottom: 22px;
+	margin-left: 0;
+	list-style: none;
 	li{
 		float: left;
 		font-size: 14px;
