--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -270,9 +270,18 @@ ul,li{list-style: none;}
 	.cancel-courseList{
 		float: right;
 		font-size: 12px;
-		color: #3bafda;
 		height: 137px;
 		line-height: 220px;
+		a{
+			color: #3bafda;
+		}
+		em{
+			font-style: normal;
+			color: #666666;
+			i{
+				font-style: normal;
+			}
+		}
 	}
 	.course-num{
 		width: 86px;
@@ -356,7 +365,7 @@ ul,li{list-style: none;}
 }
 .hot-course-list{
 	padding: 10px 0;
-	background: #fcfcfc;
+	// background: #fcfcfc;
 	.ui-avatar{
 		margin-right: 10px;
 		width: 40px;
@@ -426,6 +435,9 @@ ul,li{list-style: none;}
 			}
 		}
 	}
+}
+.hover-feed{
+	background: #fcfcfc;
 }
 .course-small-list{
 	width: 315px;
