--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -54,3 +54,10 @@ em {
         padding-top: 4px;
     }
 }
+.header-layer{
+    box-shadow:0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    z-index: 9;
+}
+.container {
+    padding: 0;
+}
