--- a/source/widget/UM.address/ui-address.css
+++ b/source/widget/UM.address/ui-address.css
@@ -60,6 +60,17 @@
   display: inline-block;
   padding-left: 20px;
 }
+.ui_ship_addr ul.shipadd_list li .addr_detail .default_addr {
+  display: inline-block;
+  width: 70px;
+  height: 24px;
+  line-height: 24px;
+  background: #ffbc3a;
+  color: #fff;
+  padding: 0;
+  text-align: center;
+  margin-left: 20px;
+}
 .ui_ship_addr ul.shipadd_list li .ship_btns {
   float: right;
   display: inline;
