--- a/source/widget/UM.address/ui-address.less
+++ b/source/widget/UM.address/ui-address.less
@@ -44,6 +44,17 @@
 				span {
 					display: inline-block;padding-left: 20px;
 				}
+				.default_addr {
+					display: inline-block;
+					width: 70px;
+					height: 24px;
+					line-height: 24px;
+					background: #ffbc3a;
+					color: #fff;
+					padding: 0;
+					text-align: center;
+					margin-left: 20px;
+				}
 			}
 			.ship_btns {
 				float: right;display: inline;line-height: 40px;visibility: hidden;
