--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -428,6 +428,12 @@ span.error{
  //网银支付
      .payment_bank {
                 width: 960px;overflow: hidden;margin-left:215px;margin-top: 20px;
+                .recharge_sum {
+                    overflow: hidden;
+                    strong {
+                        color: #cc0000;
+                    }
+                }
                 .payment_text {padding-left:40px;}
                 .paylists {
                     overflow: hidden;line-height: auto;margin-bottom: 15px;display: none;*padding-bottom: 15px;
@@ -464,6 +470,14 @@ span.error{
                                 float:left;display:inline;
                             }
                             
+                    }
+                }
+                .formPastPayment {
+                    overflow: hidden;
+                    .btn_blue {
+                        border-radius: 3px;
+                        font-size: 14px;
+                        padding: 10px 28px;
                     }
                 }
             }
