--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -32,6 +32,7 @@ body {
 @btn-primary: #1e89e0;
 @gray-base:#666;
 @text-muted:darken(@gray-base, 30%);
+
 ul,
 ol {
     margin: 0;
@@ -60,4 +61,14 @@ em {
 }
 .container {
     padding: 0;
+}
+.top {
+    &.m10 { margin-top: 10px}
+    &.m20 { margin-top: 20px}
+    &.m30 { margin-top: 30px}
+}
+.bottom {
+    &.m10 { margin-bottom: 10px}
+    &.m20 { margin-bottom: 20px}
+    &.m30 { margin-bottom: 30px}
 }
