修改学习中心头部

--- a/source/widget/Public.HomeHeader/homeHeader.less
+++ b/source/widget/Public.HomeHeader/homeHeader.less
@@ -5,9 +5,9 @@ body {
 #module-myheader {
     padding: 10px 0;
     background-color: #3bafda;
-    .container {
-        width: 1050px;
-    }
+//    .container {
+//        width: 1050px;
+//    }
     .user-avatar {
         margin-right: 10px;
     }
