去掉账户设置模块里面写死的宽度

--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -44,8 +44,8 @@ span.error{
     background: #fff;
 }
 .bi-content{
-    width: 1010px;
-    margin: 0 auto;
+//    width: 1010px;
+    margin: 2em auto;
     .bi-left{
         float: left;
         p{
