--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -52,7 +52,7 @@ span.error{
     color: #e74c3c;         
 }
 .gift-card-record{
-    width: 1050px;
+//    width: 1050px;
     margin: 20px auto;
     padding: 10px 20px;
     position: relative; 
@@ -189,8 +189,8 @@ span.error{
                 }
             }
             .prompt-box{
-                width: 1010px;
-                height: 135px;
+//                width: 1010px;
+//                height: 135px;
                 margin: 0 auto;
                 clear: both;
                 img.prompt{
