--- a/source/widget/UM.certificate.binding/certificate.binding.less
+++ b/source/widget/UM.certificate.binding/certificate.binding.less
@@ -91,7 +91,7 @@ span.error{
     }
 }
 .prompt-box{
-    width: 1010px;
+//    width: 1010px;
     margin: 0 auto;
     clear: both;
     img.prompt{
