--- a/source/widget/UM.certificate/certificate.less
+++ b/source/widget/UM.certificate/certificate.less
@@ -103,7 +103,7 @@ span.error{
     }
 }
 .prompt-box{
-    width: 1010px;
+//    width: 1010px;
     margin: 0 auto;
     clear: both;
     img.prompt{
