--- a/source/widget/UM.Nav/UserManageNav.less
+++ b/source/widget/UM.Nav/UserManageNav.less
@@ -39,5 +39,8 @@
                     line-height: 29px;
                 }
             }
+            .panel-body {
+                min-height: 600px;
+            }
         }
     }
