--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -427,7 +427,8 @@ span.error{
 }
  //网银支付
      .payment_bank {
-                width: 960px;overflow: hidden;margin-left:215px;margin-top: 20px;
+//                width: 960px;
+         overflow: hidden;margin-left:215px;margin-top: 20px;
                 .recharge_sum {
                     overflow: hidden;
                     strong {
