--- a/source/widget/glory/glory.less
+++ b/source/widget/glory/glory.less
@@ -5,6 +5,7 @@
 	border: 1px solid @borderColor;
 	line-height: 38px;
 	margin: 0;
+	padding-left: 0;
 	li{
 		list-style: none;
 		float: left;
@@ -26,6 +27,8 @@
 	margin-right: 10px;
 	overflow: hidden;
 	width: 290px;
+	padding-left: 0;
+	list-style: none;
 	li{
 		margin-bottom: 15px;
 		position: relative;
