--- a/source/widget/perfect-information/perfect-information.css
+++ b/source/widget/perfect-information/perfect-information.css
@@ -9,6 +9,12 @@ body {
   text-align: center;
   padding: 55px 0 40px 0px;
 }
+.information-guid label {
+  font-weight: normal;
+}
+.information-guid p {
+  margin-bottom: 20px;
+}
 .information-guid p.tips-infor1 {
   font-size: 18px;
   margin-top: 30px;
@@ -36,6 +42,36 @@ body {
   height: 520px;
   background: #fff;
   border-radius: 4px;
+}
+.setting-infor label {
+  font-weight: normal;
+}
+.setting-infor select {
+  -moz-appearance: none !important;
+  background-color: #fafafa;
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+");
+  background-position: 100% center;
+  background-repeat: no-repeat;
+  border-color: #cccccc;
+  border-radius: 0;
+  border-style: solid;
+  border-width: 1px;
+  color: rgba(0, 0, 0, 0.75);
+  font-family: inherit;
+  font-size: 14px;
+  height: 35px;
+  line-height: normal;
+  padding: 0 18px;
+}
+.setting-infor input[type="file"],
+.setting-infor input[type="checkbox"],
+.setting-infor input[type="radio"],
+.setting-infor select {
+  margin: 0 0 1rem;
+}
+.setting-infor select:focus {
+  background: #f3f3f3;
+  color: #999;
 }
 .setting-infor .infor-title {
   margin: 0;
@@ -170,6 +206,9 @@ body {
   height: 520px;
   background: #fff;
   border-radius: 4px;
+}
+.focus-teacher label {
+  font-weight: normal;
 }
 .focus-teacher .infor-title {
   margin: 0;
