--- a/source/widget/perfect-information/perfect-information.less
+++ b/source/widget/perfect-information/perfect-information.less
@@ -8,6 +8,12 @@ body{
 	border-radius: 4px;
 	text-align: center;
 	padding: 55px 0 40px 0px;
+	label{
+		font-weight: normal;
+	}
+	p{
+		margin-bottom: 20px;
+	}
 	p.tips-infor1{
 		font-size: 18px;
 		margin-top: 30px;
@@ -36,6 +42,33 @@ body{
 	height: 520px;
 	background: #fff;
 	border-radius: 4px;
+	label{
+		font-weight: normal;
+	}
+	select {
+		-moz-appearance: none !important;
+		background-color: #fafafa;
+		background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+");
+		background-position: 100% center;
+		background-repeat: no-repeat;
+		border-color: #cccccc;
+		border-radius: 0;
+		border-style: solid;
+		border-width: 1px;
+		color: rgba(0, 0, 0, 0.75);
+		font-family: inherit;
+		font-size: 14px;
+		height: 35px;
+		line-height: normal;
+		padding: 0 18px;
+	}
+	input[type="file"], input[type="checkbox"], input[type="radio"], select {
+		margin: 0 0 1rem;
+	}
+	select:focus{
+		background: #f3f3f3;
+		color: #999;
+	}
 	.infor-title{
 		margin: 0;
 		height: 50px;
@@ -178,6 +211,9 @@ body{
 	height: 520px;
 	background: #fff;
 	border-radius: 4px;
+	label{
+		font-weight: normal;
+	}
 	.infor-title{
 		margin: 0;
 		height: 50px;
