--- a/source/widget/courseStudycenter/courseStudycenter.css
+++ b/source/widget/courseStudycenter/courseStudycenter.css
@@ -19,52 +19,6 @@ body {
 .course-green-label {
   background: #37bc9b;
 }
-.course-btn-gray,
-.course-btn-gray[disabled] {
-  background: #ccd1d9;
-  border: 1px solid #ccd1d9;
-}
-.course-btn-gray:hover,
-.course-btn-gray[disabled]:hover {
-  background: #ccd1d9;
-  border: 1px solid #ccd1d9;
-}
-.course-btn-gray:focus,
-.course-btn-gray[disabled]:focus {
-  background: #ccd1d9;
-  border: 1px solid #ccd1d9;
-}
-.button.course-btn {
-  border-radius: 2px;
-  font-family: "SimSun";
-  margin-bottom: 0;
-  width: 98px;
-  height: 32px;
-  text-align: center;
-  font-size: 14px;
-  padding: 0;
-  line-height: 32px;
-}
-.button-icon {
-  display: inline-block;
-  height: 19px;
-  margin-right: 6px;
-  width: 13px;
-}
-.button.course-gray {
-  background-color: #fcfcfc;
-  border: 1px solid #eaeaea;
-  color: #333333;
-  line-height: 30px;
-}
-.button.course-gray:hover {
-  background-color: #e2e2e2;
-  border: 1px solid #d2d2d2;
-}
-.button.course-gray:focus {
-  background-color: #e2e2e2;
-  border: 1px solid #d2d2d2;
-}
 .icon-will-red {
   background: url("img/icon-will-red.png") no-repeat scroll left center;
   height: 10px;
@@ -81,6 +35,8 @@ body {
   position: absolute;
   right: 0px;
   color: #fff;
+  font-size: 14px;
+  font-style: normal;
 }
 .label-delay {
   background: #3bafda;
@@ -90,14 +46,94 @@ body {
   background: #37bc9b;
   top: 105px;
 }
-.courseList-wrap {
+.courseList-label {
   padding-right: 25px;
+}
+.courseList-wrap {
   position: relative;
 }
 .courseList-wrap ul,
 .courseList-wrap li {
   list-style: none;
   margin-left: 0;
+}
+.courseList-wrap button.alert,
+.courseList-wrap .button.alert {
+  background-color: #e74c3c;
+  border-color: #cf2b1a;
+  color: #ffffff;
+}
+.courseList-wrap button.alert:hover,
+.courseList-wrap button.alert:focus,
+.courseList-wrap .button.alert:hover,
+.courseList-wrap .button.alert:focus {
+  background-color: #cf2b1a;
+}
+.courseList-wrap button,
+.courseList-wrap .button {
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 300ms ease-out 0s;
+  border-style: solid;
+  border-width: 0;
+  color: #ffffff;
+  cursor: pointer;
+  -moz-appearance: none;
+  background-color: #3bafda;
+  border-color: #2392ba;
+}
+.courseList-wrap button:hover,
+.courseList-wrap button:focus,
+.courseList-wrap .button:hover,
+.courseList-wrap .button:focus {
+  background-color: #2392ba;
+  color: #fff;
+}
+.courseList-wrap .course-btn-gray,
+.courseList-wrap .course-btn-gray[disabled] {
+  background: #ccd1d9;
+  border: 1px solid #ccd1d9;
+  color: #fff;
+}
+.courseList-wrap .course-btn-gray:hover,
+.courseList-wrap .course-btn-gray[disabled]:hover {
+  background: #ccd1d9;
+  border: 1px solid #ccd1d9;
+}
+.courseList-wrap .course-btn-gray:focus,
+.courseList-wrap .course-btn-gray[disabled]:focus {
+  background: #ccd1d9;
+  border: 1px solid #ccd1d9;
+}
+.courseList-wrap .button.course-btn {
+  border-radius: 2px;
+  font-family: "SimSun";
+  margin-bottom: 0;
+  width: 98px;
+  height: 32px;
+  text-align: center;
+  font-size: 14px;
+  padding: 0;
+  line-height: 32px;
+}
+.courseList-wrap .button-icon {
+  display: inline-block;
+  margin-right: 6px;
+  width: 13px;
+}
+.courseList-wrap .button.course-gray {
+  background-color: #fcfcfc;
+  border: 1px solid #eaeaea;
+  color: #333333;
+  line-height: 30px;
+}
+.courseList-wrap .button.course-gray:hover {
+  background-color: #e2e2e2;
+  border: 1px solid #d2d2d2;
+}
+.courseList-wrap .button.course-gray:focus {
+  background-color: #e2e2e2;
+  border: 1px solid #d2d2d2;
 }
 .courseList {
   background: #fff;
@@ -122,6 +158,9 @@ body {
   margin: 0;
   list-style: none;
   padding: 0;
+}
+.courseList .left {
+  float: left;
 }
 .courseList .study-report {
   float: left;
@@ -298,7 +337,7 @@ body {
 .courseList .courseList-teacher .majar-items .avatar-roll {
   position: absolute;
   right: 36px;
-  bottom: -2px;
+  bottom: 4px;
 }
 .courseList .courseList-teacher .majar-items .avatar-roll a {
   outline: none;
@@ -441,7 +480,7 @@ table tr:nth-of-type(2n) {
 .courselayout-list ul,
 .courselayout-list li,
 .courselayout-list p {
-  margin: 0;
+  margin-left: 0;
   list-style: none;
   padding: 0;
 }
@@ -454,6 +493,13 @@ table tr:nth-of-type(2n) {
   font-family: 'Microsoft YaHei';
   line-height: 34px;
 }
+.courselayout-list .course-table {
+  background: #fff;
+}
+.courselayout-list .course-table td {
+  display: table-cell;
+  line-height: 42px;
+}
 .courselayout-list .course-table thead {
   background: #fff;
   line-height: 50px;
@@ -463,6 +509,7 @@ table tr:nth-of-type(2n) {
 }
 .courselayout-list .course-table thead tr th {
   font-size: 16px;
+  border-bottom: 1px solid #eaeaea;
 }
 .courselayout-list .course-table tr {
   font-size: 14px;
@@ -509,6 +556,7 @@ table tr:nth-of-type(2n) {
   margin-bottom: 22px;
   margin-left: 0;
   list-style: none;
+  padding-left: 0;
 }
 .teacher-tab li {
   float: left;
