--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -77,6 +77,13 @@ ul,li{list-style: none;}
 	width: 100%;
 	padding: 13px 10px;
 	overflow: hidden;
+	.button{
+		display: inline-block;
+	}
+	label{
+		margin-bottom: 0;
+		font-weight: normal;
+	}
 	a{
 		color: @dark333;
 		&:hover{
@@ -104,6 +111,7 @@ ul,li{list-style: none;}
 				height: 60px;
 				margin-left: 0;
 				margin-bottom: 9px;
+				padding-left: 0;
 				li{
 					overflow: hidden;
 					float: left;
@@ -288,6 +296,7 @@ ul,li{list-style: none;}
 		float: right;
 		font-family: 'Microsoft YaHei';
 		text-align: center;
+		padding-left: 0;
 		p{
 			font-size: 14px;
 			margin-bottom: 3px;
@@ -301,6 +310,7 @@ ul,li{list-style: none;}
 	}
 	.course-right-info{
 		margin-top: 24px;
+		padding-left: 0;
 		li{
 			padding-left: 24px;
 			font-size: 12px;
@@ -454,6 +464,7 @@ ul,li{list-style: none;}
 		position: absolute;
 		right: -25px;
 		color: #fff;
+		font-size: 14px;
 	}
 	.label-subject{
 		background: #ffbc3c;
@@ -471,6 +482,16 @@ ul,li{list-style: none;}
 		width: 230px;
 		p.tip-video{
 			margin: 3px 0;
+			.tip-video-con{
+				width: 126px;
+				overflow: hidden;
+				height: 14px;
+			}
+			.tip-video-time{
+				width: 72px;
+				height: 14px;
+				overflow: hidden;
+			}
 		}
 		p.tip-for{
 			margin: 3px 0;
@@ -494,6 +515,9 @@ ul,li{list-style: none;}
 	height: 266px;
 	width: 375px;
 	border-top: none;
+	ul{
+		padding-left: 0;
+	}
 	.dialog-second {
 		height: 155px;
 		background: url("img/teacher-cardbg.jpg") repeat scroll 0 0;
@@ -613,6 +637,7 @@ ul,li{list-style: none;}
 			ul {
 				display: inline-block;
 				overflow: hidden;
+				padding-left: 0;
 				li {
 					color: #666666;
 					display: inline;
