--- a/source/widget/glory/glory.css
+++ b/source/widget/glory/glory.css
@@ -4,6 +4,7 @@
   border: 1px solid #eaeaea;
   line-height: 38px;
   margin: 0;
+  padding-left: 0;
 }
 .screen-rank li {
   list-style: none;
@@ -25,6 +26,8 @@
   margin-right: 10px;
   overflow: hidden;
   width: 290px;
+  padding-left: 0;
+  list-style: none;
 }
 .glory-content li {
   margin-bottom: 15px;
