--- a/source/widget/errorQuestion/css/error_question.less
+++ b/source/widget/errorQuestion/css/error_question.less
@@ -83,12 +83,16 @@ div{
     background: url("../img/arrow_up.png") no-repeat right;
   }
   .que-body-show{
+    cursor: pointer;
+    width: 70px;
     padding-right: 1rem;
+    margin-right: 2rem;
     background: url("../img/arrow_down.png") no-repeat right;
   }
 }
 
 .que-answer{
+  clear:both;
   .queSet;
   .que-answer-head{
     font-weight: bold;
@@ -118,6 +122,11 @@ div{
 
 .que-img{
   padding: 0.9rem @LRpadding;
+  .stuAns{
+    width: 100px;
+    height: 70px;
+    cursor: pointer;
+  }
   .que-voice{
     position: relative;
     margin: 0;
