学霸增加头部

--- a/source/widget/glory/glory.less
+++ b/source/widget/glory/glory.less
@@ -22,7 +22,7 @@
 .gloryConPicId {
 	overflow: hidden;
 	width: 100%;
-	background: rgba(0, 0, 0, 0) url("http://img04.xesimg.com/skin/red.png") repeat scroll center top;
+	background: rgba(0, 0, 0, 0) url("img/glory-banner.jpg") no-repeat scroll center top;
 	.gloryConPicId-inner{
 		width: 1190px;
 		height: 380px;
@@ -54,7 +54,7 @@
 			margin-top: 0;
 		}
 		li{
-			line-height: 28px;
+			line-height: 30px;
 			font-size: 12px;
 			padding-left: 23px;
 			font-family: "SimSun"
