--- a/source/widget/glory/glory.css
+++ b/source/widget/glory/glory.css
@@ -21,7 +21,7 @@
 .gloryConPicId {
   overflow: hidden;
   width: 100%;
-  background: rgba(0, 0, 0, 0) url("http://img04.xesimg.com/skin/red.png") repeat scroll center top;
+  background: rgba(0, 0, 0, 0) url("img/glory-banner.jpg") no-repeat scroll center top;
 }
 .gloryConPicId .gloryConPicId-inner {
   width: 1190px;
@@ -55,7 +55,7 @@
   margin-top: 0;
 }
 .gloryConPicId .glory-grades-list li {
-  line-height: 28px;
+  line-height: 30px;
   font-size: 12px;
   padding-left: 23px;
   font-family: "SimSun";
